--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -30,7 +30,7 @@
                     <td>@calendar.Start.ToString("yyyy/MM") tot @calendar.End.ToString("yyyy/MM")</td>
                     <td>
                         <button class="btn btn-info btn-sm" @onclick="() => OverviewCalendar(calendar.Id)">Overzicht</button>
-                        <button class="btn btn-success btn-sm" @onclick="() => (calendar.Id)">Statistieken</button>
+                        <button class="btn btn-success btn-sm" @onclick="() => GoToCalendarOverviewStatistics(calendar.Id)">Statistieken</button>
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
                         <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
                         <button class="btn btn-info btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>
@@ -95,7 +95,7 @@ else
     {
         Navigation.NavigateTo($"calendar/{calendarId}");
     }
-    private void  OverviewCalendarStatistics(Guid calendarId)
+    private void  GoToCalendarOverviewStatistics(Guid calendarId)
     {
         Navigation.NavigateTo($"calendarstatistics/{calendarId}");
     }
