Fix minor bug in which jobs got shown on clicking day #120

--- a/src/Ezac.Roster.Web/Components/Pages/UserPreferenceCalendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/UserPreferenceCalendar.razor
@@ -171,6 +171,7 @@ else
         {
             selectedDay = day;
             selectedPeriod = null;
+            jobOptions.Clear();
         }
     }
 
