Add button for calendar autofill in calendar page #123

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -10,6 +10,7 @@
 
 @if (calendar != null && calendar.Days != null)
 {
+    <button class="btn btn-info">automatisch kalender genereren</button>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-9">
