Add permission name to individual adding #160

--- a/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
@@ -65,22 +65,38 @@ else
 		}
 	}
 
-	private async Task CreateUser((string Name, string Email, double Scaling) userInfo)
+	private async Task<IEnumerable<UserPermission>> GetUserPermissions()
 	{
-		var user = new UserCreateRequestModel
+		var userPermissions = new List<UserPermission>();
+		foreach(var pv in PermissionValues)
+		{
+			var nameResult = await PermissionsService.GetByIdAsync(pv.Key);
+			if (nameResult.IsSucces)
 			{
-				Name = userInfo.Name,
-				Email = userInfo.Email,
-				Scaling = userInfo.Scaling,
-				Jobs = new List<Job>(),
-				Preferences = new List<Preference>(),
-				Permissions = PermissionValues.Select(pv => new UserPermission
+				userPermissions.Add(new UserPermission
 				{
 					Id = Guid.NewGuid(),
 					PermissionId = pv.Key,
-					Experience = pv.Value
-				}).ToList()
-			};
+					Experience = pv.Value,
+					Name = nameResult.Value.Name
+				});
+			}
+		}
+		return userPermissions;
+	}
+
+	private async Task CreateUser((string Name, string Email, double Scaling) userInfo)
+	{
+		var userPermissions = await GetUserPermissions();
+		var user = new UserCreateRequestModel
+		{
+			Name = userInfo.Name,
+			Email = userInfo.Email,
+			Scaling = userInfo.Scaling,
+			Jobs = new List<Job>(),
+			Preferences = new List<Preference>(),
+			Permissions = userPermissions
+		};
 
 		var result = await UserService.AddAsync(user);
 		if (result.IsSucces)
