Make everything be at least 2 weeks after today #160

--- a/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
@@ -14,8 +14,8 @@
         _calendar = new CalenderViewModel()
         {
             Id = Guid.NewGuid(),
-            Start = DateTime.Now,
-            End = DateTime.Now,
+            Start = DateTime.Now.AddDays(14),
+            End = DateTime.Now.AddDays(14),
             Days = new List<Day>()
         };
     }
