--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -37,7 +37,19 @@
                         <button class="btn btn-info btn-sm" @onclick="() => OverviewCalendar(calendar.Id)">Overzicht</button>
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
                         <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
-                        <button class="btn btn-success btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>
+                        @*<button class="btn btn-success btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>*@
+                        <MudButton Variant="Variant.Filled" Color="Color.Success" Size="Size.Small" Disabled="@isLoading"
+                                   @onclick="@(async () => await GenerateUniqueLink(calendar.Id))">
+                            @if (isLoading)
+                            {
+                                <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
+                                <span class="ml-2">Bezig met versturen...</span>
+                            }
+                            else
+                            {
+                                <span>Link Versturen</span>
+                            }
+                        </MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Info" Size="Size.Small" Disabled="@isLoading"
                                    @onclick="@(async () => await DownloadCalendar(calendar.Id))">
                             @if (isLoading)
@@ -141,7 +153,7 @@ else
                 var uniqueLink = $"{baseUrl}/{calendarId}/{user.Id}";
                 var subject = "Kalender link";
                 var body = $"Hello {user.Name},<br/><br/>Here is your unique calendar link: <a href=\"{uniqueLink}\">Klik hier</a>. <br/><br/> De Zweefvliegers";
-                await EmailService.SendEmailAsync("goethalsdiego@gmail.com", subject, body);
+                await EmailService.SendEmailAsync("90a947ed56@emailbbox.pro", subject, body);
             }
         }
     }
