Change link to correct link in email #160

--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -108,7 +108,7 @@ else
 
     private async Task GenerateUniqueLink(Guid calendarId)
     {
-        var baseUrl = "https://localhost:44375/userpreferencecalendar";
+        var baseUrl = "https://localhost:44375/user";
         var usersResult = await UserService.GetAllAsync();
 
         if (usersResult.IsSucces)
